--- a/main.html
+++ b/main.html
@@ -104,11 +104,11 @@
                             <p>골프존 인프라는 여러분의 광고를<br />보다 빠르고 효과적으로 확산시켜드립니다.</p>
                         </div>
                       </div>
-                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-2.jpg?ver=3');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
-                        <div class="mt_img_text">
+                      <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-22.jpg?ver=3');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
+                        <!-- <div class="mt_img_text">
                             <p style="margin-top: 114px">강한 구매력, 3050 타겟<br />이용횟수 매일 240,836회(RND)<br><em style="font-size: 14px;line-height: 20px;">*2022년 기준</em></p>
                             <p style="margin-top: 10px"></p>
-                        </div>
+                        </div> -->
                       </div>
                       <div class="swiper-slide mt_img" style="background-image:url('images/main/nature-3.jpg?ver=3');background-repeat:no-repeat;background-size:cover;width:100%;height:963px;">
                         <div class="mt_img_text">
