--- a/m/sub/marketingsolution/marketing3.html
+++ b/m/sub/marketingsolution/marketing3.html
@@ -45,7 +45,7 @@
                     <dt>· 캠페인 진행사례</dt>
                     <dd style="margin-top:-8px">
                         최적의 타겟을 확보한 골프존의 다양한 매체 스크린광고, GDR, 스크린골프존 광고를 집행,  
-                        제품 홍보 및 체험 기회 제공하며 브랜드 커뮤니케이션에 집중하였습니다. 
+                        제품 홍보 및 체험 기회 제공하며 브랜드 커뮤니케이션에 집중하였습니다. <br><br>
                         볼과 클럽 소재로 골프존 스크린광고, 홀이동광고 및 가상광고 연간 집행과 동시에  
                         시타클럽 제공, GDR 로딩 및 대기화면 광고 노출과 스크린골프존 TVC 광고까지,  
                         다양한 골프존 광고 패키지를 활용해 토털 골프 브랜드로서 포지셔닝 중 입니다.
@@ -58,13 +58,13 @@
                             <div class="circle">
                                 <div>3억 7천만<br>VIEW</div>
                             </div>
-                            <p>스크린 광고(2023년 기준)</p>
+                            <p>스크린 광고<br>(2023년 기준)</p>
                         </div>
                         <div class="pop_circle">
                             <div class="circle">
                                 <div>5억 VIEW</div>
                             </div>
-                            <p>GDR 광고(2023년 기준)</p>
+                            <p>GDR 광고<br>(2023년 기준)</p>
                         </div>
                         <div class="pop_circle">
                             <div class="circle">
