--- a/m/sub/marketingsolution/marketing5.html
+++ b/m/sub/marketingsolution/marketing5.html
@@ -44,7 +44,7 @@
                     <dt>· 캠페인 진행사례</dt>
                     <dd style="margin-top:-8px">
                         참이슬이 지향하는 건전한 즐거움을 대결의 즐거움에 기반한  
-                        골프존 신규서비스 배틀존을 통하여 임팩트 있게 공략  
+                        골프존 신규서비스 배틀존을 통하여 임팩트 있게 공략 <br><br>
                         핵심 타겟은 즐거움 공감하였고 이는 높은 반응을 이끌어 낼 수 있었습니다.  
                         하이트진로는 2017년부터 2023년 현재까지 매년 배틀존 서비스를 함께하고 있습니다.
                     </dd>
@@ -62,7 +62,7 @@
                             <div class="circle">
                                 <div>3,179,000회</div>
                             </div>
-                            <p>라운드 수 (2022년 누적)</p>
+                            <p>라운드 수 <br>(2022년 누적)</p>
                         </div>
                         <div class="pop_circle">
                             <div class="circle">
