--- a/m/sub/marketingsolution/marketing8.html
+++ b/m/sub/marketingsolution/marketing8.html
@@ -46,10 +46,10 @@
                     <dt>· 캠페인 진행사례</dt>
                     <dd style="margin-top:-8px">
                         고객의 새로운 라이프스타일을 위하여, 여가와 즐거움을 포커스로 한  
-                        골프존과의 제휴를 통해 고객 및 VIP 대상으로 많은 혜택을 제공하였습니다. 
+                        골프존과의 제휴를 통해 고객 및 VIP 대상으로 많은 혜택을 제공하였습니다. <br><br>
                         대한민국 최대규모 여성 프로 스크린골프대회 GTOUR WOMEN'S 타이틀 스폰서로서  
                         9년 째 활동 중이며 골프존의 IPTV 및 유튜브 등 다양한 미디어 콘텐츠 상품을 활용해  
-                        전략적 홍보를 진행 중 입니다.  
+                        전략적 홍보를 진행 중 입니다. <br><br>
                         또한 대전 조이마루 대관을 통해 롯데렌터카 VIP대상 초청 스크린골프 대회도  진행하고 있습니다.
                     </dd>
                 </dl>
@@ -61,7 +61,7 @@
                                 <div>6억 VIEW</div>
                             </div>
                             <p>
-                                스크린 광고(2023년 기준)
+                                스크린 광고<br>(2023년 기준)
                             </p>
                         </div>
                         <div class="pop_circle">
