--- a/m/sub/marketingsolution/marketing10.html
+++ b/m/sub/marketingsolution/marketing10.html
@@ -83,13 +83,13 @@
             <div class="swiper mySwiper2">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="../../images/sub/img_marketing_pop_slide_101.jpg" alt="img1" />
+                        <img src="../../images/sub/img_marketing_pop_slide_101.png" alt="img1" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="../../images/sub/img_marketing_pop_slide_102.jpg" alt="img1" />
+                        <img src="../../images/sub/img_marketing_pop_slide_102.png" alt="img1" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="../../images/sub/img_marketing_pop_slide_103.jpg" alt="img1" />
+                        <img src="../../images/sub/img_marketing_pop_slide_103.png" alt="img1" />
                     </div>
                 </div>
                 <div class="swiper-button-next"></div>
