--- a/m/sub/marketingsolution/marketing12.html
+++ b/m/sub/marketingsolution/marketing12.html
@@ -70,10 +70,10 @@
             <div class="swiper mySwiper2">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="../../images/sub/img_marketing_pop_slide_121.jpg" alt="img1" />
+                        <img src="../../images/sub/img_marketing_pop_slide_121.png" alt="img1" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="../../images/sub/img_marketing_pop_slide_122.jpg" alt="img1" />
+                        <img src="../../images/sub/img_marketing_pop_slide_122.png" alt="img1" />
                     </div>
                 </div>
                 <div class="swiper-button-next"></div>
