--- a/m/sub/marketingsolution/marketing6.html
+++ b/m/sub/marketingsolution/marketing6.html
@@ -79,7 +79,7 @@
             <div class="swiper mySwiper2">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="../../images/sub/img_marketing_pop_slide_62.jpg?ver=2" alt="img1" />
+                        <img src="../../images/sub/img_marketing_pop_slide_62.png?ver=2" alt="img1" />
                     </div>
                 </div>
                 <div class="swiper-button-next"></div>
