--- a/m/sub/marketingsolution/marketing9.html
+++ b/m/sub/marketingsolution/marketing9.html
@@ -73,10 +73,10 @@
             <div class="swiper mySwiper2">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="../../images/sub/img_marketing_pop_slide_91.jpg" alt="img1" />
+                        <img src="../../images/sub/img_marketing_pop_slide_91.png" alt="img1" />
                     </div>
                     <div class="swiper-slide">
-                        <img src="../../images/sub/img_marketing_pop_slide_92.jpg" alt="img1" />
+                        <img src="../../images/sub/img_marketing_pop_slide_92.png" alt="img1" />
                     </div>
                 </div>
                 <div class="swiper-button-next"></div>
