--- a/m/sub/partnership/partnership2.html
+++ b/m/sub/partnership/partnership2.html
@@ -135,11 +135,11 @@
             </div>
             <div class="sub_cont" style="margin-top:7rem">
                 <div class="sub_title">
-                    <h2 class="tt" style="margin-bottom: 12px;font-size: 16px;line-height: 1.4;">
+                    <h2 class="tt" style="margin-bottom: 25px;font-size: 22px;line-height: 1.4;">
                         제작 시 만들어지는 <strong style="color: #006eb7;">모든 자료들은</strong><br>
-                        골프장에서 <strong style="color: #006eb7;">다양하게 사용 될 수 있도록 제공</strong>합니다.
+                        골프장에서 <strong style="color: #006eb7;">다양하게 사용 될 수 있도록 <br>제공</strong>합니다.
                     </h2>
-                    <h2>3D 코스 영상/ 홀이미지 무상 제공</h2>
+                    <h2 style="font-size: 18px;">3D 코스 영상/ 홀이미지 무상 제공</h2>
                     <span>실제 코스를 바탕으로 제작한 3D 코스 영상과 홀이미지를 제공</span>
                     <div style="margin-top:30px;margin-bottom:20px"><img src="../../images/sub/img_partnership_info_8.png" alt="" /></div>
                     <div class="frame-area">
