--- a/sub/marketingsolution/marketing.html
+++ b/sub/marketingsolution/marketing.html
@@ -847,7 +847,7 @@
                                 <div class="swiper mySwiper2" style="width:830px;margin:100px auto 0 auto;text-align: center;">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_62.jpg?ver=2" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_62.png?ver=2" alt="img1" />
                                         </div>
                                     </div>
                                     <div class="swiper-button-next"></div>
@@ -1043,7 +1043,7 @@
                                 <h1>KB증권</h1>
                                 <h2>
                                     KB증권<br>
-                                    부(富)메랑 리워드 & 해외 ETF 거래 이벤트<br>
+                                    부(<span style="font-family: dotum;">富</span>)메랑 리워드 & 해외 ETF 거래 이벤트<br>
                                     캠페인 참여 독려 성료
                                 </h2>
                                 <p class="pop_text">
@@ -1091,10 +1091,10 @@
                                 <div class="swiper mySwiper2" style="width:830px;margin:100px auto 0 auto;text-align: center;">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_91.jpg" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_91.png" alt="img1" />
                                         </div>
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_92.jpg" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_92.png" alt="img1" />
                                         </div>
                                     </div>
                                     <div class="swiper-button-next"></div>
@@ -1172,13 +1172,13 @@
                                 <div class="swiper mySwiper2" style="width:830px;margin:100px auto 0 auto;text-align: center;">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_101.jpg" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_101.png" alt="img1" />
                                         </div>
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_102.jpg" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_102.png" alt="img1" />
                                         </div>
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_103.jpg" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_103.png" alt="img1" />
                                         </div>
                                     </div>
                                     <div class="swiper-button-next"></div>
@@ -1248,7 +1248,7 @@
                                 <div class="swiper mySwiper2" style="width:830px;margin:100px auto 0 auto;text-align: center;">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_111.jpg" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_111.png" alt="img1" />
                                         </div>
                                     </div>
                                     <div class="swiper-button-next"></div>
@@ -1313,10 +1313,10 @@
                                 <div class="swiper mySwiper2" style="width:830px;margin:100px auto 0 auto;text-align: center;">
                                     <div class="swiper-wrapper">
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_121.jpg" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_121.png" alt="img1" />
                                         </div>
                                         <div class="swiper-slide">
-                                            <img src="../../images/sub/img_marketing_pop_slide_122.jpg" alt="img1" />
+                                            <img src="../../images/sub/img_marketing_pop_slide_122.png" alt="img1" />
                                         </div>
                                     </div>
                                     <div class="swiper-button-next"></div>
