--- a/sub/partnership/partnership.html
+++ b/sub/partnership/partnership.html
@@ -281,11 +281,11 @@
                 <div id="tab3" class="tab_content">
                     <div class="tab3_content">
                         <div class="sub_title">
-                            <h2 class="tt" style="margin-bottom: 20px;font-size: 24px;line-height: 1.4;">
+                            <h2 class="tt">
                                 제작 시 만들어지는 <strong style="color: #006eb7;">모든 자료들은</strong><br>
                                 골프장에서 <strong style="color: #006eb7;">다양하게 사용 될 수 있도록 제공</strong>합니다.
                             </h2>
-                            <h2>3D 코스 영상/ 홀이미지 무상 제공</h2>
+                            <h2 style="font-size: 30px;margin: 20px 0 0;">3D 코스 영상/ 홀이미지 무상 제공</h2>
                             <span>실제 코스를 바탕으로 제작한 3D 코스 영상과 홀이미지를 제공</span>
                             <div style="margin-top:60px;margin-bottom:50px"><img src="../../images/sub/img_partnership_info_8.png" alt="" /></div>
                             <iframe width="768" height="540" src="https://www.youtube.com/embed/GiPKQrfwgwI" frameborder="0" 
