--- a/m/sub/marketingsolution/marketing11.html
+++ b/m/sub/marketingsolution/marketing11.html
@@ -75,7 +75,7 @@
             <div class="swiper mySwiper2">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="../../images/sub/img_marketing_pop_slide_111.jpg" alt="img1" />
+                        <img src="../../images/sub/img_marketing_pop_slide_111.png" alt="img1" />
                     </div>
                 </div>
                 <div class="swiper-button-next"></div>
